--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@rainbow-me/rainbowkit": "^2.0.5",
         "@tanstack/react-query": "^5.28.4",
+        "@wagmi/core": "^2.6.17",
         "next": "^14.1.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
