--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_DEFAULT_ETHER_RPC="https://eth.llamarpc.com"
+NEXT_PUBLIC_DEFAULT_ETHER_RPC="https://api.avax-test.network/ext/bc/C/rpc"
