--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "eslint": "^8.15.0",
         "eslint-config-next": "^14.1.3",
         "next": "^14.1.3",
+        "prettier": "3.3.x",
         "typescript": "5.4.2"
     },
     "engines": {
